@@ -78,6 +78,8 @@ Release 0.19.0 - Unreleased
                its used checking batch size
    HBASE-959   Be able to get multiple RowResult at one time from client side
                (Sishen Freecity via Stack)
+   HBASE-936   REST Interface: enable get number of rows from scanner interface
+               (Sishen Freecity via Stack)
     
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
